--- a/main.rmd
+++ b/main.rmd
@@ -299,7 +299,6 @@ cor.test(annual_income, loan_amount, method = "spearman")
 The Spearman’s rank correlation test shows a very strong positive correlation between annual income and loan amount `(ρ = 0.941, p < 0.001)`. This indicates that as applicants’ annual income increases, the loan amount they apply for and receive also tends to increase. Since the p-value is far below `0.05`, we reject the null hypothesis and conclude that there is a significant positive relationship between annual income and loan amount. This strong association suggests that the two variables convey similar information.
 
 ### Is there a significant difference in average CIBIL scores between approved and rejected applicants?
-Here, we are investigating to see if there is a significant difference in CIBIL Scores of Approved and Rejected candidates. First we plot the entire distribution to identify outliers then we plot a chart showing the Approved and Rejected populations.
 ```{r Q5, echo=TRUE}
 library(ggplot2)
 #CIBIL score frequency distribution
@@ -315,19 +314,11 @@ ggplot(loan_df, aes(x = loan_status, y = cibil_score, fill = loan_status)) +
 t.test(cibil_score ~ loan_status, data = loan_df)
 
 ```
-
-#### Hypotheses:
-- **Null hypothesis (H₀):** The average CIBIL Scores for Approved and Rejected applicants are equal.
-- **Alternative hypothesis (H₁):** The average CIBIL Scores for Approved and Rejected applicants are not equal.
-We use this test to confirm whether the CIBIL Scores for the Approved and Rejected applicants are statistically significantly different or the same.
-
-#### Conclusion
 The overall CIBIL score frequency distribution shows no apparent outliers. The individual distributions for approved and rejected loans show a few outliers, but it is not necessary to remove them. Even though the outliers are dragging the two means closer to each other, the means are still significantly different even when including them in the t-test.
 
 There is a significant difference in CIBIL scores between approved and rejected applicants because the p-value, `2e-16`, is much lower than the standard alpha threshold of `0.05`. This allows us to reject the null hypothesis that the two means of approved and rejected applicants are **equal**.
 
 ### For rejected loans, is there a significant difference in the mean CIBIL score between applicants with shorter loan term loans (<=10 years) versus longer term loans(>10 years)?
-Here, we are investigating to see if there is a significant difference in CIBIL Scores in the Rejected applicant population depending if they want a short (less than or equal to 10 years) vs longer term loan (greater than 10 years). First we plot the entire distribution to identify outliers then we plot a chart showing the Rejected population with shorter and longer term loans.
 ```{r Q6, echo=TRUE}
 
 #created subsets for shorter and longer loans then ran t-test
@@ -363,18 +354,12 @@ t.test(rejected_shorter$cibil_score, rejected_longer$cibil_score)
 t.test(cleaned_shorter_cibil, cleaned_longer_cibil)
 
 ```
-#### Hypotheses:
-- **Null hypothesis (H₀):** The average CIBIL Scores of Rejected applicants with shorter loan terms (less than or equal to 10 years) is equal to that of Rejected applicants with longer loan term (greater than 10 years).
-- **Alternative hypothesis (H₁):** The average CIBIL Scores of Rejected applicants with shorter loan terms (less than or equal to 10 years) is not equal to that of Rejected applicants with longer loan term (greater than 10 years).
-We use this test to confirm whether the CIBIL Scores for the Rejected applicants with shorter loan terms and longer loan terms are statistically significantly different or the same.
 
-#### Conclusion
 The overall loan terms frequency distribution shows no apparent outliers however there are a few in the shorter and longer loan term groups. Having this said, even when removing these outliers there no significant differences found between the two groups and their respective CIBIL scores.
 
 There is not a significant difference in CIBIL scores between shorter `(<= 10 years)` and longer `(>10 years)` term loans within the rejected group of applicants because the **p-value**, `1`, is much higher than the standard alpha threshold of `0.05`. This allows us to accept the null hypothesis that the two means of shorter and longer term loans of rejected applicants are equal.
 
-### Is there a correlation between the CIBIL Score and the Loan Term among those whose loans are approved?
-Here, we are investigating whether or not there is a correlation among Approved applicants between the two variables, CIBIL Score and Loan Term (Years). A correlation test is conducted to determine the correlation coefficient and p-value. A graph is also plotted showing the relationship between CIBIL Score and Loan Term.
+### Is there a correlation between the CIBIL Score and the Loan Term among those whose loans are approved?  
 ```{r Q7, echo=TRUE}
 
 #correlation coefficient
@@ -387,12 +372,7 @@ cor.test(loan_df[trimws(loan_df$loan_status) == "Approved", "cibil_score"], loan
 ggplot(subset(loan_df, trimws(loan_status) == "Approved"), aes(x = loan_term, y = cibil_score)) + geom_point(alpha = 0.4, color = "#AAE5D8") + geom_smooth(method = "lm", se = FALSE, color = "#061411") + labs(title = "CIBIL Score vs. Loan Term for Approved Loans", x = "Loan Term (Years)", y = "CIBIL Score")
 
 ```
-#### Hypotheses:
-- **Null hypothesis (H₀):** There is no correlation between CIBIL Score and Loan Term (Years) of Approved applicants.
-- **Alternative hypothesis (H₁):** There is a correlation between CIBIL Score and Loan Term (Years) of Approved applicants.
-We use this test to confirm whether there is a correlation between CIBIL Scores and loan terms for the applicants who were Approved for their loan.
 
-#### Conclusion
 The correlation coefficient of `0.21` shows a weak but positive relationship where approved candidates with higher CIBIL scores have a slightly higher tendency to approved for longer loan terms. And the p-value is very small, `2e-16`, meaning that the correlation coefficient is unlikely due to chance.
 
 ### Does self-employment status affect loan approval?
@@ -422,6 +402,7 @@ chisq.test(contable)
 The Chi-square test (`p = 1`) also shows no significant association between self-employment status and loan approval. This confirms that self-employment does not affect the likelihood of loan approval in this dataset.
 
 ### Does the number of dependents affect approval of loans?
+Here, we will see whether the person's dependents affects the approval or rejection of a loan. We begin by visualizing the distribution of approved and rejected applications for each dependents' group using a bar chart.
 ```{r Q9, echo=TRUE}
 ggplot(loan_df, aes(x = no_of_dependents, fill = loan_status)) +
   geom_bar(position = "dodge") +
@@ -434,14 +415,20 @@ ggplot(loan_df, aes(x = no_of_dependents, fill = loan_status)) +
   theme_minimal()
 ```
 The bar chart shows that approval and rejection counts are fairly similar across all dependent categories, with no noticeable trend suggesting that the number of dependents strongly influences loan approval outcomes. While minor variations exist, the approval rate appears consistent across groups, indicating that loan approval is likely independent of the number of dependents. A Chi-square test will confirm this statistically.
+#### Hypotheses:
+- **Null hypothesis (H₀):** Number of dependents is independent of employment status
+- **Alternative hypothesis (H₁):** Number of dependents depend on employment status; there is an association between Number of dependents and loan approval.
 
 ```{r, echo=TRUE}
 contable <- table(loan_df$no_of_dependents, loan_df$loan_status)
 chisq.test(contable)
 ```
-The Chi-square test (`p = 0.8`) also shows no significant association between no_of_dependents and loan approval. This confirms that no_of_dependents does not affect the likelihood of loan approval in this dataset.
+
+#### Conclusion
+The Chi-square test (`p = 0.8`) also shows no significant association between `no_of_dependents` and loan approval. This confirms that `no_of_dependents` does not affect the likelihood of loan approval in this dataset.
 
 ### Does requested loan term affect approval?
+The goal is to see whether loan term will affect the approval of loan, we have already seen the distribution of loan terms so now we will use a box plot to visualize whether certain loan terms have more chance of approval than others.
 ```{r Q10, echo=TRUE}
 ggplot(loan_df, aes(x = loan_status, y = loan_term, fill = loan_status)) +
   geom_boxplot(alpha = 0.6) +
@@ -453,7 +440,9 @@ ggplot(loan_df, aes(x = loan_status, y = loan_term, fill = loan_status)) +
   scale_fill_manual(values = c(" Approved" = "#98C25F", " Rejected" = "#EB3BA7")) +
   theme_minimal()
 ```
-The boxplot shows that approved loans have a **wider range** of terms, including very short loans, while rejected loans generally have longer terms. The median loan term for approved loans is `10 years`, compared to `12 years` for rejected loans, indicating that rejected loans tend to have slightly longer terms
+The boxplot shows that approved loans have a **wider range** of terms, including very short loans, while rejected loans generally have longer terms. The median loan term for approved loans is `10 years`, compared to `12 years` for rejected loans, indicating that rejected loans tend to have slightly longer terms. To statistically verify this we will perform a t-test with following null and alternate hypthesis:
+
+
 
 
 ```{r, echo=TRUE}
